--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,16 @@
   font-family: "Poppins", sans-serif;
 }
 /*------------Header--------*/
-.header {
-  background-color: black;
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
 }
+
 .wrapper {
   background: black;
-  position: sticky;
 }
 .wrapper nav {
   position: relative;
@@ -163,6 +167,8 @@ ul {
   background-size: cover;
   height: 1000px;
   padding-top: 100px;
+  position: relative;
+  z-index: -100;
 }
 .show-product .menu-title a {
   background-color: black;
