--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   text-decoration: none;
   font-family: "Poppins", sans-serif;
 }
-/*------------Header--------*/
+/*------------Header Start--------*/
 .sticky {
   position: fixed;
   top: 0;
@@ -14,7 +14,6 @@
   right: 0;
   width: 100%;
 }
-
 .wrapper {
   background: black;
 }
@@ -161,14 +160,18 @@ ul {
 .content .links ul li:hover ul {
   top: 0;
 }
-/*---------End Header---------*/
+/*---------Product start---------*/
 .show-product {
   background-image: url("./../img/nen-05.png");
   background-size: cover;
-  height: 1000px;
+  height: 100%;
+  padding-bottom: 50px;
   padding-top: 100px;
   position: relative;
   z-index: -100;
+}
+.show-product .menu-title {
+  padding: 0 10px;
 }
 .show-product .menu-title a {
   background-color: black;
@@ -195,7 +198,88 @@ ul {
   font-weight: 600;
   margin: 20px 0;
 }
+/*----------Blog Start----------*/
+.blogs {
+  background-color: black;
+  background-image: url("./../img/nen-05.png");
+  background-size: cover;
+  height: 100%;
+  padding-bottom: 50px;
+  padding-top: 50px;
+  position: relative;
+  z-index: -100;
+}
+.blogs .blog-list {
+  padding: 0 15px;
+}
+.blogs .menu-title {
+  margin: 30px 0;
+  padding: 0;
+}
+.blogs .menu-title a {
+  color: white;
+  border: 0.5px solid white;
+  padding: 5px;
+  cursor: pointer;
+}
+.blogs .blog-item {
+  background-color: white;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  border-radius: 10px;
+  padding: 15px 15px;
+  margin-bottom: 20px;
+  height: auto;
+}
+.blogs .blog-item img {
+  width: 100%;
+  height: 200px;
+}
+.blogs .blog-item * {
+  margin-bottom: 10px;
+}
+/*------Store start-------*/
+.store {
+  background-image: url("./../img/nen-05.png");
+  background-size: cover;
+  height: 100%;
+  padding-bottom: 50px;
+  padding-top: 50px;
+  position: relative;
+  z-index: -100;
+}
+.main-store {
+  border-radius: 10px;
+}
+.main-store img {
+  width: 100%;
+  border-radius: 10px;
+}
+.list-store img{
+width: 100%;
+border-radius: 10px;
+border: 1px dashed black;
+}
+/*-------Footer----------*/
+.footer {
+  background-color:black;
+  background-image: url("./../img/nen-05.png");
+  background-size: cover;
+  height: 100%;
+  padding-top: 50px;
+  position: relative;
+  z-index: -100;
+}
+hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+}
 
+.Copyright img {
+  float: right;
+
+}
 /* Responsive code start */
 @media screen and (max-width: 1250px) {
   .wrapper nav {
